--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
-    // Glide
-//    def glide_version = '4.12.0'
-//    implementation "com.github.bumptech.glide:glide:$glide_version"
-//    kapt "com.github.bumptech.glide:compiler:$glide_version"
-
     implementation "com.github.skydoves:landscapist-glide:1.3.6"
+
+    // Accompanist
+    def accompanist_version = '0.18.0'
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
 }
